[package]
name = "nostos-glam"
version = "0.1.0"
edition = "2021"
description = "Glam linear algebra extension for Nostos"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
nostos-extension = { path = "/home/petter/dev/rust/nostos_duplicate/crates/extension" }
glam = "0.29"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync"] }
