[package]
name = "nostos-glam"
version = "0.1.0"
edition = "2021"
description = "Glam linear algebra extension for Nostos"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
nostos-extension = { git = "https://github.com/pegesund/nostos", branch = "master" }
glam = "0.29"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync"] }
